[metadata]
name = pgwebsocket
description = Async websocket to PostgreSQL proxy.
long_description = file: README.rst
keywords = hacktoberfest postgresql
author = Barnaby Shearer
author_email = b@zi.is
repository = "https://github.com/BarnabyShearer/pgwebsocket"
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
    aiohttp
    psycopg2
python_requires = >=3.7

[options.package_data]
* = py.typed, *.c, *.h

[bdist_wheel]
universal=1
