[metadata]
name = pgwebsocket
description = Async websocket to PostgreSQL proxy.
long_description = file: README.rst
keywords = postgresql
author = Barnaby Shearer
author_email = b@zi.is
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
project_urls =
    Source = "https://github.com/BarnabyShearer/pgwebsocket"
    Tracker = "https://github.com/BarnabyShearer/pgwebsocket/issues"
    Documentation = "http://pgwebsocket.readthedocs.io/en/latest/"

[options]
packages = find:
install_requires = 
    aiohttp
    psycopg2
    types-psycopg2
python_requires = >=3.7

[options.package_data]
* = py.typed, *.c, *.h

[bdist_wheel]
universal=1
